--- a/Style.css
+++ b/Style.css
@@ -1,6 +1,7 @@
 body {
     
     transition: background-color .5s;
+  
   }
 .sidenav {
     height: 100%;
@@ -35,7 +36,27 @@ body {
     font-size: 36px;
     margin-left: 50px;
   }
-  
+  .logo{
+    height: 70px;
+    width: 100px;
+    margin-left: -900px;
+    position: relative;
+  }
+  .container-img{
+    position: relative;
+  text-align: center;
+  color: white;
+  }
+  .intro .home-img{
+    width: 1519px;
+    height: 679px;
+  }
+  .caption{
+    position: absolute;
+    top: 35%;
+    left: 20%;
+    color: white;
+  }
   #main {
     transition: margin-left .5s;
     padding: 14px;
@@ -48,12 +69,12 @@ body {
   }
   .topnav {
     overflow: hidden;
-    background-color: pink;
+    background-color: #4CA1AF;
   }
   
   .topnav a {
     float: left;
-    color: #6d84ec;
+    color: white;
     text-align: center;
     padding: 20px 16px;
     text-decoration: none;
@@ -62,7 +83,7 @@ body {
   }
   
   .topnav a:hover {
-    background-color: rgb(236, 122, 122);
+    background-color: white;
     color: black;
     height: 70px;
   }
@@ -71,10 +92,115 @@ body {
       display: flex;
       flex-wrap: nowrap;
       justify-content: space-between;
-      background-color: pink;
+      background: #4CA1AF;
       height: 70px;
+     /* position: fixed;*/
   }
   .intro{
       text-align: center;
       
   }
+  .slider-view{
+    background-color: black;
+    height: 100%;
+    
+  }
+  .carousel {
+  width:1000px;
+  height:679px;
+  margin: auto;
+}
+  .caption{
+    position: absolute;
+    top: 35%;
+    left: 20%;
+    color: white;
+  }
+  .tell-them{
+    position: absolute;
+    top: 15%;
+    left: 20%;
+    right: 20%;
+    color: white;
+  }
+  .book-order{
+    position: absolute;
+    top: 25%;
+    left: 20%;
+    right: 20%;
+    color: white;
+    opacity: 0.8;
+  }
+  .book-order a{
+    height: 60px;
+    width: 120px;
+    padding-top: 18px;
+    background-color: black;
+    color: orange;
+  }
+  .book-order a{
+    height: 60px;
+    width: 120px;
+    padding-top: 18px;
+  }
+.carousel-control.right, .carousel-control.left {
+  background-image: none;
+  color: white;
+}
+
+.carousel-indicators li {
+  border-color: white;
+}
+
+.carousel-indicators li.active {
+  background-color: white;
+}
+
+.item span {
+  font-style: normal;
+}
+
+.options-menu {
+  position: relative;
+  width: 50%;
+}
+
+.tiffins {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+.options-menu img{
+  width: 100px;
+}
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.options-menu:hover .tiffins {
+  opacity: 0.3;
+}
+
+.options-menu:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+.contact-us{
+  background-color: #818181;
+}
