--- a/RegisterStyle.css
+++ b/RegisterStyle.css
@@ -49,7 +49,7 @@
     top: 15px;
     font-size: 40px;
     font-weight: bold;
-    color: white;
+    color: black;
     
   }
   
@@ -73,12 +73,9 @@
     to {transform: scale(1)}
   }
 
-  .topnav {
-    overflow: hidden;
-    background-color: pink;
-  }
   
-  .topnav .btn-element {
+  
+ /* .topnav .btn-element {
     float: left;
     color: #6d84ec;
     text-align: center;
@@ -96,7 +93,7 @@
     color: black;
     height: 70px;
   }
-
+*/
   #submit-btn{
       margin-bottom: 10px;
   }
