--- a/Style.css
+++ b/Style.css
@@ -42,15 +42,7 @@ body {
     margin-left: -900px;
     position: relative;
   }
-  .container-img{
-    position: relative;
-  text-align: center;
-  color: white;
-  }
-  .intro .home-img{
-    width: 1519px;
-    height: 679px;
-  }
+
   .caption{
     position: absolute;
     top: 35%;
@@ -96,10 +88,7 @@ body {
       height: 70px;
      /* position: fixed;*/
   }
-  .intro{
-      text-align: center;
-      
-  }
+ 
   .slider-view{
     background-color: black;
     height: 100%;
@@ -107,7 +96,7 @@ body {
   }
   .carousel {
   width:1000px;
-  height:679px;
+  height:100%;
   margin: auto;
 }
   .caption{
@@ -162,45 +151,71 @@ body {
 
 .options-menu {
   position: relative;
-  width: 50%;
+  width: 900px;
+  height: 600px;
+  margin-top :100px;
+  margin-bottom: 50px;
 }
 
 .tiffins {
   opacity: 1;
-  display: block;
-  width: 100%;
-  height: auto;
-  transition: .5s ease;
-  backface-visibility: hidden;
+  width: 300px;
+  height: 250px;;
+  
 }
-.options-menu img{
-  width: 100px;
-}
-.middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.options-menu:hover .tiffins {
-  opacity: 0.3;
-}
-
-.options-menu:hover .middle {
+.lunch {
   opacity: 1;
+  width: 300px;
+  height: 250px;
+  
 }
 
-.text {
-  background-color: #4CAF50;
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
-}
 .contact-us{
   background-color: #818181;
 }
+.panel {
+  border: 1px solid #4CA1AF;
+  border-radius:0;
+  transition: box-shadow 0.5s;
+ 
+}
+
+.panel:hover {
+  box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+}
+.panel-footer .btn:hover {
+  border: 1px solid #f4511e;
+  background-color: #fff !important;
+  color: #f4511e;
+}
+
+.panel-heading {
+  color: #fff !important;
+  background-color: #4CA1AF !important;
+  padding: 25px;
+  border-bottom: 1px solid transparent;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.panel-footer {
+  background-color: #fff !important;
+}
+
+.panel-footer h3 {
+  font-size: 32px;
+}
+
+.panel-footer h4 {
+  color: #aaa;
+  font-size: 14px;
+}
+
+.panel-footer .btn {
+  margin: 15px 0;
+  background-color: #4CA1AF;
+  color: #fff;
+}
+
